==> arpel/LPCSensorNode/BOARDLib/arpel_groovy_sensor_board_lib/src/RF12.c <==
#include "RF12.h"
#include <string.h>
#include <avr/io.h>
#include <util/crc16.h>
#include <avr/eeprom.h>
#include <avr/sleep.h>
#include <Arduino.h> // Arduino 1.0
#include <WProgram.h> // Arduino 0022
#define RF_MAX   (RF12_MAXDATA + 5)
#define RFM_IRQ     2
#define SS_DDR      DDRB
#define SS_PORT     PORTB
#define SS_BIT      0
#define SPI_SS      53    // PB0, pin 19
#define SPI_MOSI    51    // PB2, pin 21
#define SPI_MISO    50    // PB3, pin 22
#define SPI_SCK     52    // PB1, pin 20
#define RFM_IRQ     10
#define SS_DDR      DDRB
#define SS_PORT     PORTB
#define SS_BIT      4
#define SPI_SS      4
#define SPI_MOSI    5
#define SPI_MISO    6
#define SPI_SCK     7
#define RFM_IRQ     2
#define SS_DDR      DDRB
#define SS_PORT     PORTB
#define SS_BIT      1
#define SPI_SS      1     // PB1, pin 3
#define SPI_MISO    4     // PA6, pin 7
#define SPI_MOSI    5     // PA5, pin 8
#define SPI_SCK     6     // PA4, pin 9
#define RFM_IRQ     3	    // PD0, INT0, Digital3
#define SS_DDR      DDRB
#define SS_PORT     PORTB
#define SS_BIT      6	    // Dig10, PB6
#define SPI_SS      17    // PB0, pin 8, Digital17
#define SPI_MISO    14    // PB3, pin 11, Digital14
#define SPI_MOSI    16    // PB2, pin 10, Digital16
#define SPI_SCK     15    // PB1, pin 9, Digital15
#define RFM_IRQ     2
#define SS_DDR      DDRB
#define SS_PORT     PORTB
#define SS_BIT      2     // for PORTB: 2 = d.10, 1 = d.9, 0 = d.8
#define SPI_SS      10    // PB2, pin 16

static uint8_t rf12_byte (uint8_t out) {
	TxBuf[0] = out;
	XfSetup.Length = 1;
	XfSetup.pTx = TxBuf;
	XfSetup.RxCnt = XfSetup.TxCnt = 0;
	XfSetup.DataSize = 8;
	XfSetup.pRx = RxBuf;
	return Chip_SPI_RWFrames_Blocking(LPC_SPI, &XfSetup);
}

uint8_t rf12_initialize (uint8_t id, uint8_t band, uint8_t g, uint16_t f) {
	uint16_t dummy;
    nodeid = id;
    group = g;
    frequency = f;
// caller should validate!    if (frequency < 96) frequency = 1600;

    rf12_spiInit();

    pinStates[pinStatescount++] = Chip_GPIO_GetPinState(LPC_GPIO_PORT, 0, RFM_nIRQ_PIN);

    dummy = rf12_xfer(0x0000); // initial SPI transfer added to avoid power-up problem

    pinStates[pinStatescount++] = Chip_GPIO_GetPinState(LPC_GPIO_PORT, 0, RFM_nIRQ_PIN);

    dummy = rf12_xfer(RF_SLEEP_MODE); // DC (disable clk pin), enable lbd

    // wait until RFM12B is out of power-up reset, this takes several *seconds*
    dummy = rf12_xfer(RF_TXREG_WRITE); // in case we're still in OOK mode
    //while (digitalRead(RFM_nIRQ_PIN) == 0)
    //    rf12_xfer(0x0000);

    while (Chip_GPIO_GetPinState(LPC_GPIO_PORT, 0, RFM_nIRQ_PIN) == false)
    	rf12_xfer(0x0000);

    dummy = rf12_xfer(0x80C7 | (band << 4)); // EL (ena TX), EF (ena RX FIFO), 12.0pF
    dummy = rf12_xfer(0xA000 + frequency); // 96-3960 freq range of values within band
    rf12_xfer(0xC606); // approx 49.2 Kbps, i.e. 10000/29/(1+6) Kbps
    rf12_xfer(0x94A2); // VDI,FAST,134kHz,0dBm,-91dBm
    rf12_xfer(0xC2AC); // AL,!ml,DIG,DQD4
    if (group != 0) {
        rf12_xfer(0xCA83); // FIFO8,2-SYNC,!ff,DR
        rf12_xfer(0xCE00 | group); // SYNC=2DXX；
    } else {
        rf12_xfer(0xCA8B); // FIFO8,1-SYNC,!ff,DR
        rf12_xfer(0xCE2D); // SYNC=2D；
    }
    rf12_xfer(0xC483); // @PWR,NO RSTRIC,!st,!fi,OE,EN
    rf12_xfer(0x9850); // !mp,90kHz,MAX OUT
    rf12_xfer(0xCC77); // OB1，OB0, LPX,！ddy，DDIT，BW0
    rf12_xfer(0xE000); // NOT USE
    rf12_xfer(0xC800); // NOT USE
    rf12_xfer(0xC049); // 1.66MHz,3.1V

    rxstate = TXIDLE;

    return nodeid;
}
